# ChangeLog for dev-ruby/ruby-ldap
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-ldap/ChangeLog,v 1.34 2009/08/09 12:08:30 nixnut Exp $

  09 Aug 2009; nixnut <nixnut@gentoo.org> ruby-ldap-0.9.7.ebuild:
  ppc stable #273959

  23 Jul 2009; Hans de Graaff <graaff@gentoo.org> ruby-ldap-0.9.9.ebuild:
  Fix dependencies.

*ruby-ldap-0.9.9 (23 Jul 2009)

  23 Jul 2009; Hans de Graaff <graaff@gentoo.org> +ruby-ldap-0.9.9.ebuild:
  Version bump with fixes to support newer OpenLDAP versions. Thanks
  to Felix Schäfer in #278618 for providing the new ebuild.

  23 Jul 2009; Hans de Graaff <graaff@gentoo.org> -ruby-ldap-0.9.4.ebuild:
  Remove old version.

  24 Jun 2009; Raúl Porcel <armin76@gentoo.org> ruby-ldap-0.9.7.ebuild:
  ia64 stable wrt #273959

  17 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  ruby-ldap-0.9.7.ebuild:
  Stable on alpha, bug #273959

  16 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  ruby-ldap-0.9.7.ebuild:
  stable x86, bug 273959

*ruby-ldap-0.9.8 (15 Jun 2009)

  15 Jun 2009; Hans de Graaff <graaff@gentoo.org> +ruby-ldap-0.9.8.ebuild:
  Version bump.

  05 Jun 2009; Hans de Graaff <graaff@gentoo.org> -ruby-ldap-0.8.3.ebuild:
  Remove old version.

  19 May 2009; Ferris McCormick <fmccor@gentoo.org> ruby-ldap-0.9.7.ebuild:
  Sparc stable, required for Bug #270432.

  06 Oct 2008; Diego Pettenò <flameeyes@gentoo.org> ruby-ldap-0.9.7.ebuild:
  Use -j1 during install or install will fail.

*ruby-ldap-0.9.7 (07 Nov 2007)

  07 Nov 2007; Hans de Graaff <graaff@gentoo.org> +ruby-ldap-0.9.7.ebuild:
  Version bump with fixes for Windows. Also fix QA issues in the ebuild, and
  restrict testing because tests are interactive and depend on a running LDAP
  server

  07 Nov 2007; Hans de Graaff <graaff@gentoo.org> -ruby-ldap-0.9.2.ebuild,
  -ruby-ldap-0.9.3.ebuild:
  Remove old versions

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.
