@@ -1,10 +1,16 @@
-DIST ruby-ldap-0.9.6.tar.gz 63649 RMD160 81c5d9f73868f1a2a002c13efce88f1b32286d66 SHA1 fdcbaf3fab833053a308055a405b1cf1e5c64b3f SHA256 aec6b84d26e7c499cbf5147d149175da7082fa50f2100a00914266aeb38b053b
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST ruby-ldap-0.9.7.tar.gz 63870 RMD160 ce32a1958f83148c53e8dc43993a05c1ebc5c0e3 SHA1 f155005bcb229bd0ac85c23aede8b6b4c537b27c SHA256 be8db063c98ff9de317983860048b3391e311ff8c961851bd01c29f0bdc8edec
-DIST ruby-ldap-0.9.8.tar.bz2 54556 RMD160 8ab52b76fa81a489133bdb32d7e6f5dc766a6b80 SHA1 2e00866df43b2def8a0ad40dfd27df14fcf51b72 SHA256 98a77579d8a11d5fb559f1f589c27af6dc8495657a8a9ecc5bd16b71c4a7e884
 DIST ruby-ldap-0.9.9.tar.bz2 55225 RMD160 2e409a34606a0888cf1f8aa6d166446f418faccb SHA1 4927852fa38295c551a8410e5e2e91fcf9031c5d SHA256 59459bb38eb24953fa817cee7a62959904119602daab36ad70fe8b78bb958aab
-EBUILD ruby-ldap-0.9.6.ebuild 753 RMD160 00cbcfa1d01ed4a0ee7d98f43a270ba60752ed09 SHA1 4d648ebc710238d8503ed007ecba60fc38c9236e SHA256 b7909dec7e28f512037c05ce82ed803d9cb297038277e2bf79571a6294cbde60
 EBUILD ruby-ldap-0.9.7.ebuild 872 RMD160 0a2a5b116534b13de961893bdb808a210f560faf SHA1 e63e2fa4163fbbf1b977aa21b67fe0e729469e67 SHA256 6c1825d35593f9cf2dfaa2d8a27a4f818e7173d9aabeecdac052aad55d822c24
-EBUILD ruby-ldap-0.9.8.ebuild 878 RMD160 92f9d416e7f4b21c81b9b1a7e4cd8230f4beee2e SHA1 7b0b14cfeecb77c0249dc8a7030304afc0110cd4 SHA256 4939dbf1bb032e787dc75ee2fc9b5e0168b0b4e590f166d3937ef3a1b093e3ca
 EBUILD ruby-ldap-0.9.9.ebuild 899 RMD160 53096bc40543e57111ae30e57a813cf998af55e6 SHA1 fa12be05c44d268e9d887d9c700fccefa7216c72 SHA256 f582dc92b78bc614898a41629489f2368d17e0936e5b5b6dec6d2d01dacf6035
-MISC ChangeLog 4509 RMD160 4bf33dd663a1b53f61c0ea3b8c615ec9de2ff10f SHA1 73af780748599735df55e9ce8cf004e15bb5421c SHA256 880ccb4b29d8aa04e7900bba4bbecd72edf851ec1471b0ea9556ac7ea184d8d0
+MISC ChangeLog 4635 RMD160 9662ead8cae6d1033bd9ea0b5d3c0941afbec7b6 SHA1 e24a24549f9c8143b935bf210fe90d7c6fe1485a SHA256 058d6d41eacd07d3f67a026c21ebba8d3496c295043b1603119cb0817484abdc
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAkp+0l0ACgkQVYU2Ai8K93dcyQCgtw48FunXTOpn4QgvREpZSV55
+/QYAoK/jLMWB19xYitFmJhQKCHGTT6yS
+=WCtY
+-----END PGP SIGNATURE-----
