@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/ruby-ldap
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-ldap/ChangeLog,v 1.34 2009/08/09 12:08:30 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-ldap/ChangeLog,v 1.35 2009/08/09 13:42:43 graaff Exp $
+
+  09 Aug 2009; Hans de Graaff <graaff@gentoo.org> -ruby-ldap-0.9.6.ebuild,
+  -ruby-ldap-0.9.8.ebuild:
+  Remove old versions.
 
   09 Aug 2009; nixnut <nixnut@gentoo.org> ruby-ldap-0.9.7.ebuild:
   ppc stable #273959
